[package]
name = "modern-hopfield-network"
version = "0.4.0"
edition = "2021"

[dependencies]
anyhow = "1.0.93"
byteorder = { version = "1.5.0", optional = true }
clap = { version = "4.5.20", features = ["derive"] }
cxx = "1.0.129"
directories = "5.0.1"
image = "0.25.5"
multimap = "0.10.0"
num-traits = "0.2.19"
rand = "0.8.5"
rand_chacha = "0.3.1"
rusqlite = { version = "0.32.1", features = ["modern-full", "bundled-full"], optional = true}
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

[features]
default = ["db"]
db = ["rusqlite", "byteorder"]

[dev-dependencies]
assert_cmd = "2.0.16"
glob = "0.3.1"
predicates = "3.1.2"
